--- a/source/sass/_vars.scss
+++ b/source/sass/_vars.scss
@@ -1,10 +1,8 @@
-$primary: #0AD9C6;
-$white: #fff;
-$decorate: #2C2E3F;
-$black: #48494D;
-
+$primary: #0ad9c6;
+$white: #ffffff;
+$decorate: #2c2e3f;
+$black: #48494d;
 $bg-black: #131314;
-
 $tablet-width: 1023px;
 $desktop-width: 1920px;
 $mobile-width: 767px;
