--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -13,9 +13,9 @@
   flex-wrap: wrap;
   gap: 13rem;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-  padding: 2.5rem 1rem 1.5rem 1rem;
+  padding: 2.5rem 2rem 1.5rem 2rem;
   justify-content: space-between;
-  max-width: 87.5rem;
+  max-width: 88rem;
   margin: 0 auto;
 
   @media (max-width: $tablet-width) {
@@ -26,7 +26,7 @@
   }
 }
 
-.nav__item {
+.nav__content a {
   color: $white;
   opacity: 0.2;
 
@@ -49,37 +49,26 @@
       transform: rotate(45deg);
       margin-left: 5rem;
     }
-
   }
 
-    &:hover,
-    &:focus {
-      color: $primary;
-      opacity: 1;
+  &:hover,
+  &:focus {
+    color: $primary;
+    opacity: 1;
   }
 
-    &:active {
-      color: darken($primary, 25%);
-  }
-}
-
-.nav__item--left {
-  text-align: right;
-
-  @media (max-width: $tablet-width) {
-    text-align: left;
+  &:active {
+    color: darken($primary, 25%);
   }
 }
 
 .nav--closed .nav__content {
-
   @media (max-width: $tablet-width) {
-  display: none;
+    display: none;
   }
 }
 
 .nav--opened .nav__content {
-
   @media (max-width: $tablet-width) {
     min-width: 100%;
     min-height: 56.8rem;
@@ -87,10 +76,7 @@
     position: absolute;
     top: 0;
     right: 0;
-
-
   }
-
 }
 
 
@@ -118,7 +104,6 @@
       background-color: lighten($primary, 15%);
     }
   }
-
 }
 
 .nav__toggle::before {
@@ -139,7 +124,6 @@
     z-index: 1000;
     background-color: $white;
   }
-
 
   &::before,
   &::after {
