--- a/source/sass/blocks/type.scss
+++ b/source/sass/blocks/type.scss
@@ -7,10 +7,7 @@
   @media (max-width: $tablet-width) {
     margin-top: 10rem;
     margin-bottom: 12rem;
-
-
   }
-
 
   @media (max-width: $mobile-width) {
     padding: 0;
@@ -18,7 +15,8 @@
     margin-bottom: 11rem;
   }
 }
-.type__title {
+
+.type h2 {
   font-weight: 600;
   font-size: 30px;
   line-height: 30px;
@@ -30,8 +28,6 @@
     font-size: 24px;
     line-height: 41px;
     margin-bottom: 3rem;
-
-
   }
 }
 
@@ -51,9 +47,8 @@
   @media (max-width: $mobile-width) {
     flex-direction: column;
     margin: 0 auto;
-    align-items: center
+    align-items: center;
   }
-
 }
 
 .type__photo-wrapper {
@@ -66,7 +61,7 @@
   }
 }
 
-.type__photo {
+.type__photo-wrapper img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -77,29 +72,29 @@
 .type__photo-wrapper--left {
   position: relative;
 
-    &::before {
-      content: "";
-      position: absolute;
-      left: -6rem;
-      bottom: 33%;
-      width: 18rem;
-      height: 18rem;
-      border: 27px solid #0AD9C6;
-      border-radius: 50%;
-      z-index: 1;
+  &::before {
+    content: "";
+    position: absolute;
+    left: -6rem;
+    bottom: 33%;
+    width: 18rem;
+    height: 18rem;
+    border: 27px solid #0ad9c6;
+    border-radius: 50%;
+    z-index: 1;
 
-      @media (max-width: $tablet-width) {
-        width: 127px;
-        height: 127px;
-        border: 18px solid #0AD9C6;
-        left: -4rem;
-        bottom: -3rem;
-        z-index: -1;
-      }
+    @media (max-width: $tablet-width) {
+      width: 127px;
+      height: 127px;
+      border: 18px solid #0ad9c6;
+      left: -4rem;
+      bottom: -3rem;
+      z-index: -1;
+    }
 
-      @media (max-width: $mobile-width) {
+    @media (max-width: $mobile-width) {
       left: -2.5rem;
-      }
+    }
   }
 }
 
@@ -125,12 +120,11 @@
   &::before {
     content: "";
     position: absolute;
-//    right: 90%;
     left: -6%;
-    top: -3%;
+    top: -4%;
     width: 5rem;
     height: 5rem;
-    border: 8px solid #0AD9C6;
+    border: 8px solid #0ad9c6;
 
     @media (max-width: $tablet-width) {
       display: none;
@@ -140,12 +134,11 @@
   &::after {
     content: "";
     position: absolute;
-//    right: 90%;
     right: -7%;
-    bottom: -5%;
+    bottom: -4%;
     width: 5rem;
     height: 5rem;
-    border: 8px solid #0AD9C6;
+    border: 8px solid #0ad9c6;
 
     @media (max-width: $tablet-width) {
       display: none;
@@ -156,46 +149,36 @@
 .type__photo-wrapper--right {
   position: relative;
 
-    &::after {
-      content: "";
-      position: absolute;
-      right: -3.5rem;
-      top: -8%;
-      width: 9.5rem;
-      height: 9.5rem;
-      border: 17px solid #0AD9C6;
-      border-radius: 50%;
-      z-index: 1;
+  &::after {
+    content: "";
+    position: absolute;
+    right: -3.5rem;
+    top: -8%;
+    width: 9.5rem;
+    height: 9.5rem;
+    border: 17px solid #0ad9c6;
+    border-radius: 50%;
+    z-index: 1;
 
-      @media (max-width: $tablet-width) {
-        width: 68px;
-        height: 68px;
-        border: 13px solid #0AD9C6;
-        right: -2.5rem;
-        top: -2rem;
-  }
-      @media (max-width: $mobile-width) {
-        right: -1rem;
-      }
+    @media (max-width: $tablet-width) {
+      width: 68px;
+      height: 68px;
+      border: 13px solid #0ad9c6;
+      right: -2.5rem;
+      top: -2rem;
+    }
 
+    @media (max-width: $mobile-width) {
+      right: -1rem;
+    }
   }
 }
 
-.type__caption {
+.type__photo-wrapper p {
   font-weight: 600;
   font-size: 22px;
-  line-height: 34px;
+  line-height: 29px;
   text-align: center;
   letter-spacing: -0.5px;
   position: relative;
-
-  @media (max-width: $tablet-width) {
-
-  }
-
-  @media (max-width: $mobile-width) {
-
-  }
 }
-
-
