--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -71,9 +71,11 @@
 .nav--opened .nav__content {
   @media (max-width: $tablet-width) {
     min-width: 100%;
-    min-height: 56.8rem;
+    position: fixed;
+    min-height: 100%;
     background-color: $white;
-    position: absolute;
+    z-index: 2;
+//    position: absolute;
     top: 0;
     right: 0;
   }
@@ -119,7 +121,8 @@
 
 .nav--opened .nav__toggle {
   @media (max-width: $tablet-width) {
-    position: absolute;
+//    position: absolute;
+    position: fixed;
     right: 1rem;
     z-index: 1000;
     background-color: $white;
