--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -106,4 +106,14 @@
   line-height: 22px;
   margin: 0;
   color: rgba(0, 0, 0, 0.5);
+
+  &:hover,
+  &:focus {
+    color: $primary;
+    opacity: 1;
+  }
+
+  &:active {
+    color: darken($primary, 25%);
+  }
 }
