--- a/source/sass/_vars.scss
+++ b/source/sass/_vars.scss
@@ -2,7 +2,7 @@ $primary: #00b2ff;
 $white: #ffffff;
 $decorate: #2c2e3f;
 $black: #666666;
-$bg-black: #1b2d37;;
+$bg-black: #1b2d37;
 $tablet-width: 1023px;
 $desktop-width: 1920px;
 $mobile-width: 767px;
