--- a/source/sass/blocks/facts.scss
+++ b/source/sass/blocks/facts.scss
@@ -7,13 +7,13 @@
   margin-top: 5.5rem;
   grid-gap: 3.5rem;
 
-  @media(max-width: $tablet-width) {
+  @media (max-width: $tablet-width) {
     max-width: 72rem;
     grid-template-rows: 1fr min-content;
     grid-row-gap: 5rem;
   }
 
-  @media(max-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     grid-template-columns: 1fr;
     grid-template-rows: 31rem 31rem 23rem 25rem;
     max-width: 30rem;
@@ -29,14 +29,14 @@
   padding-bottom: 4rem;
   padding-right: 4rem;
 
-  @media(max-width: $tablet-width) {
+  @media (max-width: $tablet-width) {
     padding-top: 2rem;
     padding-left: 2.5rem;
     padding-right: 1.5rem;
     padding-bottom: 2rem;
   }
 
-  @media(max-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     padding-top: 2rem;
     padding-left: 2.5rem;
     padding-right: 1.5rem;
@@ -73,12 +73,12 @@
   line-height: 34px;
   color: $primary;
 
-  @media(max-width: $tablet-width) {
+  @media (max-width: $tablet-width) {
     margin-top: 1rem;
-    margin-bottom: 0rem;
+    margin-bottom: 0;
   }
 
-  @media(max-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     font-size: 20px;
     line-height: 28px;
   }
@@ -88,13 +88,13 @@
   font-size: 16px;
   line-height: 22px;
   color: $black;
-  font-family: "PT Mono";
+  font-family: "PT Mono", "Arial", monospace;
 
-  @media(max-width: $tablet-width) {
+  @media (max-width: $tablet-width) {
     margin-top: 0.7rem;
   }
 
-  @media(max-width: $tablet-width) {
+  @media (max-width: $tablet-width) {
     margin-top: 1.5rem;
   }
 }
