--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -3,7 +3,7 @@
   height: 66rem;
   position: relative;
 
-  @media(max-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     height: 63rem;
   }
 
@@ -19,7 +19,7 @@
     background-repeat: no-repeat;
     z-index: 0;
 
-    @media(max-width: $tablet-width) {
+    @media (max-width: $tablet-width) {
       display: none;
     }
   }
@@ -33,14 +33,14 @@
   margin: 0 auto;
   grid-gap: 11rem;
 
-  @media(max-width: $tablet-width) {
+  @media (max-width: $tablet-width) {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     grid-gap: 0;
     max-width: 59rem;
   }
 
-  @media(max-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     max-width: 288px;
   }
 }
@@ -53,7 +53,7 @@
   position: relative;
   margin-top: 5rem;
 
-  @media(max-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     margin-top: 2.5rem;
   }
 }
@@ -61,7 +61,7 @@
 .feedback__image {
   margin-top: -6.5rem;
 
-  @media(max-width: $tablet-width) {
+  @media (max-width: $tablet-width) {
     display: none;
   }
 }
@@ -103,7 +103,7 @@
 .feedback__text p {
   font-size: 16px;
   line-height: 22px;
-  font-family: "PT Mono";
+  font-family: "PT Mono", "Arial", monospace;
   margin-top: 1rem;
   padding-left: 0.5rem;
 }
@@ -111,7 +111,7 @@
 .form input:not(input[type="checkbox"]) {
   height: 5rem;
   width: 27rem;
-  background-color: #02B4FF;
+  background-color: #02b4ff;
   border: none;
   color: white;
   font-family: inherit;
@@ -119,7 +119,7 @@
   padding-top: 1rem;
   font-size: 16px;
 
-  @media(max-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     width: 100%;
     margin-bottom: 3rem;
   }
@@ -134,17 +134,18 @@
     line-height: 22px;
     color: white;
     opacity: 1;
-    font-family: "PT Mono";
+    font-family: "PT Mono", "Arial", monospace;
   }
 }
 
 
 .form textarea {
   display: inline-block;
+  vertical-align: middle;
   height: 15rem;
   width: 100%;
   resize: none;
-  background: #19BAFF;
+  background: #19baff;
   padding-left: 2rem;
   border: none;
   color: white;
@@ -155,7 +156,7 @@
   padding-top: 1rem;
   margin-bottom: 5rem;
 
-  @media(max-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     margin-top: 1rem;
     height: 10rem;
     margin-bottom: 3rem;
@@ -171,7 +172,7 @@
     line-height: 22px;
     color: white;
     opacity: 1;
-    font-family: "PT Mono";
+    font-family: "PT Mono", "Arial", monospace;
   }
 }
 
@@ -181,7 +182,7 @@
   background-color: transparent;
   color: white;
   text-transform: uppercase;
-  font-family: "Roboto Condensed";
+  font-family: "Roboto Condensed", "Arial", sans-serif;
   border: 1px solid white;
   margin-left: 0.5rem;
   border-radius: 5px;
@@ -190,7 +191,7 @@
   line-height: 16px;
   letter-spacing: 0.05em;
 
-  @media(max-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     width: 100%;
   }
 
@@ -218,12 +219,12 @@
 
 .form input[type="checkbox"]:focus + span {
   background-image: url(".././img/checkoff.svg");
-  box-shadow: inset 0 2px 3px rgba(0,0,0,.2), 0 0 0 3px rgba(255,255,255,.7);
+  box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.2), 0 0 0 3px rgba(255, 255, 255, 0.7);
 }
 
 .form input[type="checkbox"]:focus:checked + span {
   background-image: url(".././img/checkon.svg");
-  box-shadow: inset 0 2px 3px rgba(0,0,0,.2), 0 0 0 3px rgba(255,255,255,.7);
+  box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.2), 0 0 0 3px rgba(255, 255, 255, 0.7);
 }
 
 .form span {
@@ -232,10 +233,11 @@
   height: 16px;
   background-image: url(".././img/checkoff.svg");
   margin-left: -3rem;
+  cursor: pointer;
 }
 
 .form label {
-  font-family: "PT Mono";
+  font-family: "PT Mono", "Arial", monospace;
   font-size: 14px;
   line-height: 16px;
   max-width: 25rem;
@@ -243,13 +245,14 @@
   position: absolute;
   bottom: 1rem;
   right: -2.5rem;
+  cursor: pointer;
 
-  @media(max-width: $tablet-width) {
+  @media (max-width: $tablet-width) {
     max-width: 260px;
     bottom: 0;
   }
 
-  @media(max-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     max-width: 260px;
     bottom: -7rem;
     right: 0;
