--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -8,16 +8,16 @@
   position: relative;
   overflow: hidden;
 
-  @media(max-width: $tablet-width) {
+  @media (max-width: $tablet-width) {
     height: 61rem;
     max-width: 100%;
     grid-template-columns: 67% 33%;
   }
 
-  @media(max-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     grid-template-columns: 1fr;
     grid-template-rows: 36% 64%;
-    grid-gap: 0rem;
+    grid-gap: 0;
     height: 62rem;
   }
 
@@ -54,7 +54,7 @@
   background-color: transparent;
   border: none;
   color: white;
-  font-family: "PT Mono";
+  font-family: "PT Mono", "Arial", monospace;
   font-size: 14px;
   line-height: 16px;
   opacity: 0.5;
@@ -73,13 +73,13 @@
   margin-left: 7rem;
   max-width: 86rem;
 
-  @media(max-width: $tablet-width) {
+  @media (max-width: $tablet-width) {
     padding: 0;
     margin-left: 9rem;
     margin-top: 5rem;
   }
 
-  @media(max-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     padding: 0;
     margin: 0 auto;
     max-width: 287px;
@@ -91,23 +91,23 @@
   font-size: 80px;
   line-height: 94px;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: white;
   margin-bottom: 0;
   letter-spacing: 0.07em;
 
-  @media(max-width: $tablet-width) {
+  @media (max-width: $tablet-width) {
     font-size: 60px;
     line-height: 70px;
     margin-bottom: 3rem;
   }
 
-  @media(max-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     font-size: 40px;
     line-height: 47px;
     letter-spacing: 0.07em;
     text-transform: uppercase;
     margin-top: 0;
-    color: #FFFFFF;
+    color: white;
     margin-bottom: 2rem;
   }
 }
@@ -116,19 +116,19 @@
   font-size: 22px;
   line-height: 34px;
   text-align: left;
-  font-family: 'PT Mono';
+  font-family: "PT Mono", "Arial", monospace;
   color: white;
   position: relative;
   padding-left: 9.5rem;
 
-  @media(max-width: $tablet-width) {
+  @media (max-width: $tablet-width) {
     font-size: 18px;
     line-height: 28px;
     margin: 0;
     padding-left: 5rem;
   }
 
-  @media(max-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     font-size: 16px;
     line-height: 25px;
   }
@@ -140,9 +140,9 @@
     top: 2rem;
     width: 66px;
     height: 2px;
-    background-color: #fff;
+    background-color: white;
 
-    @media(max-width: $tablet-width) {
+    @media (max-width: $tablet-width) {
       width: 33px;
     }
   }
@@ -154,7 +154,7 @@
   font-size: 16px;
   line-height: 53px;
   text-align: center;
-  font-family: "Roboto Condensed";
+  font-family: "Roboto Condensed", "Arial", sans-serif;
   text-transform: uppercase;
   background-color: $primary;
   letter-spacing: 0.05em;
@@ -165,13 +165,13 @@
   max-width: 40.5rem;
   height: 5.6rem;
 
-  @media(max-width: $tablet-width) {
+  @media (max-width: $tablet-width) {
     max-width: 38rem;
     margin-top: 5.6rem;
     margin-left: 5rem;
   }
 
-  @media(max-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     max-width: 29rem;
     margin: 0;
     margin-top: 4rem;
@@ -213,12 +213,11 @@
     align-self: auto;
   }
 
-  @media(max-width: $mobile-width) {
+  @media (max-width: $mobile-width) {
     width: 100%;
     height: 22rem;
     right: 0;
     order: -1;
-
   }
 }
 
