--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -35,16 +35,16 @@
 .modal p {
   font-size: 16px;
   line-height: 22px;
-  color: #FFFFFF;
-  font-family: "PT Mono";
+  color: white;
+  font-family: "PT Mono", "Arial", monospace;
   max-width: 90%;
 }
 
 .modal label {
   font-size: 14px;
   line-height: 16px;
-  font-family: "PT Mono";
-  color: #FFFFFF;
+  font-family: "PT Mono", "Arial", monospace;
+  color: white;
   opacity: 0.8;
 }
 
@@ -77,12 +77,12 @@
 
 .modal__form input[type="checkbox"]:focus + span {
   background-image: url(".././img/checkoff.svg");
-  box-shadow: inset 0 2px 3px rgba(0,0,0,.2), 0 0 0 3px rgba(255,255,255,.7);
+  box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.2), 0 0 0 3px rgba(255, 255, 255, 0.7);
 }
 
 .modal__form input[type="checkbox"]:focus:checked + span {
   background-image: url(".././img/checkon.svg");
-  box-shadow: inset 0 2px 3px rgba(0,0,0,.2), 0 0 0 3px rgba(255,255,255,.7);
+  box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.2), 0 0 0 3px rgba(255, 255, 255, 0.7);
 }
 
 .modal__form span {
