--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -31,16 +31,11 @@
   @media (max-width: $tablet-width) {
     margin-left: 2rem;
   }
-
 }
 
 .nav__content--left a {
   grid-row: span 2;
   margin-top: -0.5rem;
-}
-
-.nav__content-text {
-  outline: 5px solid red;
 }
 
 .nav__content p {
@@ -68,8 +63,10 @@
 
 .nav__content-mail p,
 .nav__content-phone p {
-  font-family: "PT Mono";
+
+  font-family: "PT Mono", "Arial", monospace;
   display: inline-block;
+  vertical-align: middle;
   margin-left: 1.2rem;
 
   @media (max-width: $tablet-width) {
@@ -114,6 +111,7 @@
   border-radius: 5px;
   color: white;
   text-transform: uppercase;
+  cursor: pointer;
 
   @media (max-width: $tablet-width) {
     display: none;
@@ -129,9 +127,6 @@
   }
 }
 
-.nav__content-text {
-  margin-left: 1.5rem;
-}
 
 .nav__content b {
   font-weight: bold;
