--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,26 +22,6 @@ body {
   max-width: 1920px;
 }
 
-.main__image {
-  background-image: url(".././img/intro.png");
-  background-repeat: no-repeat;
-  height: 880px;
-  position: absolute;
-  top: 0rem;
-  width: 100%;
-  z-index: -1;
-  background-color: #1B2D37;
-  background-position: center center;
-
-  @media (max-width: $tablet-width) {
-    height: 69rem;
-  }
-
-  @media (max-width: $mobile-width) {
-    height: 65rem;
-  }
-}
-
 .main__image a {
   display: none;
 
@@ -49,7 +29,7 @@ body {
     background-color: transparent;
     border: none;
     color: white;
-    font-family: "PT Mono";
+    font-family: "PT Mono", "Arial", monospace;
     font-size: 14px;
     line-height: 16px;
     opacity: 0.5;
@@ -77,44 +57,40 @@ a {
   cursor: pointer;
 }
 
-button {
-  cursor: pointer;
-}
-
 @font-face {
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 300;
-  src: local(''),
-    url('../fonts/roboto-condensed-v19-latin_cyrillic-300.woff2') format('woff2'),
-    url('../fonts/roboto-condensed-v19-latin_cyrillic-300.woff') format('woff');
+  src: local(""),
+    url("../fonts/roboto-condensed-v19-latin_cyrillic-300.woff2") format("woff2"),
+    url("../fonts/roboto-condensed-v19-latin_cyrillic-300.woff") format("woff");
 }
 
 @font-face {
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 400;
-  src: local(''),
-    url('../fonts/roboto-condensed-v19-latin_cyrillic-regular.woff2') format('woff2'),
-    url('../fonts/roboto-condensed-v19-latin_cyrillic-regular.woff') format('woff');
+  src: local(""),
+    url("../fonts/roboto-condensed-v19-latin_cyrillic-regular.woff2") format("woff2"),
+    url("../fonts/roboto-condensed-v19-latin_cyrillic-regular.woff") format("woff");
 }
 
 @font-face {
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 700;
-  src: local(''),
-    url('../fonts/roboto-condensed-v19-latin_cyrillic-700.woff2') format('woff2'),
-    url('../fonts/roboto-condensed-v19-latin_cyrillic-700.woff') format('woff');
+  src: local(""),
+    url("../fonts/roboto-condensed-v19-latin_cyrillic-700.woff2") format("woff2"),
+    url("../fonts/roboto-condensed-v19-latin_cyrillic-700.woff") format("woff");
 }
 
 @font-face {
-  font-family: 'PT Mono';
+  font-family: "PT Mono";
   font-style: normal;
   font-weight: 400;
-  src: local(''),
-    url('../fonts/pt-mono-v8-latin_cyrillic-regular.woff2') format('woff2'),\
-    url('../fonts/pt-mono-v8-latin_cyrillic-regular.woff') format('woff');
+  src: local(""),
+    url("../fonts/pt-mono-v8-latin_cyrillic-regular.woff2") format("woff2"),
+    url("../fonts/pt-mono-v8-latin_cyrillic-regular.woff") format("woff");
 }
 
 *,
@@ -130,4 +106,24 @@ button {
   overflow: hidden;
   clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
   white-space: nowrap; /* added line */
+}
+
+.main__image {
+  background-image: url(".././img/intro.png");
+  background-repeat: no-repeat;
+  height: 880px;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: -1;
+  background-color: #1b2d37;
+  background-position: center center;
+
+  @media (max-width: $tablet-width) {
+    height: 69rem;
+  }
+
+  @media (max-width: $mobile-width) {
+    height: 65rem;
+  }
 }
