--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -16,7 +16,7 @@
 
   @media (max-width: $mobile-width) {
     grid-template-columns: 1fr;
-    grid-template-rows: 36% 64%;
+    grid-template-rows: 35% 65%;
     grid-gap: 0;
     height: 62rem;
   }
@@ -41,9 +41,9 @@
     }
 
     @media (max-width: $mobile-width) {
-      width: 527px;
-      height: 533px;
-      top: -14rem;
+      width: 532px;
+      height: 485px;
+      top: -11rem;
       right: -35rem;
       background-size: 100% 100%;
     }
@@ -108,7 +108,7 @@
     text-transform: uppercase;
     margin-top: 0;
     color: white;
-    margin-bottom: 2rem;
+    margin-bottom: 2.5rem;
   }
 }
 
@@ -207,17 +207,20 @@
 
   @media (max-width: $tablet-width) {
     width: 465px;
-    height: 340px;
+    height: 370px;
     object-fit: cover;
     overflow: hidden;
     align-self: auto;
   }
 
   @media (max-width: $mobile-width) {
-    width: 100%;
+    width: 30rem;
     height: 22rem;
     right: 0;
     order: -1;
+    overflow: visible;
+    z-index: -1;
+    margin-left: auto;
   }
 }
 
@@ -226,12 +229,13 @@
   height: 100%;
 
   @media (max-width: $tablet-width) {
-    margin: 36px 0 0 0;
+    margin: 28px 0 0 0;
     height: 340px;
   }
 
   @media (max-width: $mobile-width) {
-    margin: 2rem 0 0 2.2rem;
+    display: block;
+    margin: 2rem 0 0 0.5rem;
     height: 100%;
   }
 }
