--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,7 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+  height: 100%;
 }
 
 body {
@@ -19,7 +20,9 @@ body {
   font-size: 1.6rem;
   min-width: 320px;
   margin: 0 auto;
-  max-width: 1920px;
+  height: 100%;
+
+
 }
 
 .main__image a {
@@ -44,7 +47,10 @@ body {
 .content {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 100%;
+}
+
+main {
   flex: 1 0 auto;
 }
 
@@ -116,11 +122,13 @@ a {
   top: 0;
   width: 100%;
   z-index: -1;
+  object-fit: cover;
   background-color: #1b2d37;
-  background-position: center center;
+  background-size: 100% 100%;
 
   @media (max-width: $tablet-width) {
     height: 69rem;
+
   }
 
   @media (max-width: $mobile-width) {
